提交正常跑代码

--- a/news-project/yase/src/main/resources/application.properties
+++ b/news-project/yase/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#server.port=8082
 
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+spring.resources.static-locations=/WEB-INF/static/
