--- a/news-project/pom.xml
+++ b/news-project/pom.xml
@@ -62,6 +62,12 @@
                 <artifactId>spring-boot-devtools</artifactId>
                 <version>${org.springframework.boot.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-thymeleaf</artifactId>
+                <version>${org.springframework.boot.version}</version>
+            </dependency>
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
